--- a/example.html
+++ b/example.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
 
+        <meta charset="utf-8">
+
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
         <link href="dist/css/tchat-ui.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <style>
 
